--- a/infhoras.html
+++ b/infhoras.html
@@ -7,15 +7,15 @@
     <title>Hora do Sistema</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="carregar()">
     <header>
         <h1>HORAS</h1>
     </header>
     <section>
-        <div>
-            oi
+        <div id="msg">
+            Vai aparcer a msg...
         </div>
-        <div>
+        <div id="img">
             oi
         </div>
     </section>
