--- a/infhoras.html
+++ b/infhoras.html
@@ -7,7 +7,7 @@
     <title>Hora do Sistema</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body onload="carregar()">
+<body onload="carregar()" id>
     <header>
         <h1>HORAS</h1>
     </header>
@@ -15,8 +15,8 @@
         <div id="msg">
             Vai aparcer a msg...
         </div>
-        <div id="img">
-        
+        <div id="imagem">
+        <img id="foto"><img>
         </div>
     </section>
     <footer>
