--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Hora do Sistema</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body onload="carregar()" id>
+<body onload="carregar()">
     <header>
         <h1>HORAS</h1>
     </header>
